--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.16.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0"
   }
 }
